syntax = "proto3";
package comms;

message Request_UploadBook {
  bytes chunks = 1;
  string nombre = 2;
  int32 cantidad = 3;
  int32 id = 4;
}

message Response_UploadBook {
  int32 state = 1;
}

message Request_DownloadBook {

}

message Response_DownloadBook {

}

message Request_Log {

}

message Response_Log {

}

message Request_Propuesta {

}

message Response_Propuesta {

}

message Request_Distribuir {

}

message Response_Distribuir {

}

service Comms {
 rpc UploadBook(Request_UploadBook) returns (Response_UploadBook) {}
 rpc DownloadBook(Request_DownloadBook) returns (Response_DownloadBook) {}
 rpc Log(Request_Log) returns (Response_Log) {}
 rpc Propuesta(Request_Propuesta) returns (Response_Propuesta) {}
 rpc Distribuir(Request_Distribuir) returns (Response_Distribuir) {}
}
